--- a/public/themes/admin_simpleboot3/admin/login.html
+++ b/public/themes/admin_simpleboot3/admin/login.html
@@ -23,7 +23,7 @@
         }
     </script>
 </head>
-<body onload="tip()">
+<body>
 <div class="wrap">
     <div class="container">
         <div class="row">
@@ -80,12 +80,6 @@
     (function () {
         document.getElementById('input_username').focus();
     })();
-</script>
-<script language="javascript">
-function tip()
-{
-alert("搜库资源网源码;soku.cc");
-}
 </script>
 </body>
 </html>
