--- a/public/themes/simpleboot3/user/profile/center.html
+++ b/public/themes/simpleboot3/user/profile/center.html
@@ -11,7 +11,7 @@
     .sq-set-item__text p{color: #999}
 </style>
 
-<body class="body-all" body onload="tip()">
+<body class="body-all">
     <div class="templatemo-content">'
         <!--  我的应用左侧 -->
         <include file="public@tube"/>
@@ -50,7 +50,7 @@
                         <p>设置剩余设备数还剩多少发送短信提醒</p>
                     </div>
                 </a>
-             
+
                 <a class="sq-set-item disabled">
                     <i class="layui-icon layui-icon-set"></i>
                     <div class="sq-set-item__text">
@@ -67,7 +67,7 @@
                 </a>
             </div>
             <div class="sq-set">
-               
+
                 <a class="sq-set-item disabled">
                     <i class="layui-icon layui-icon-set"></i>
                     <div class="sq-set-item__text">
@@ -93,12 +93,6 @@
         </div>
         <!--  修改资料-->
     </div>
-    <script language="javascript">
-function tip()
-{
-alert("搜库资源网源码提供soku.cc");
-}
-</script>
 </body>
 
 <include file="public@footer"/>
