--- a/public/themes/simpleboot3/user/register.html
+++ b/public/themes/simpleboot3/user/register.html
@@ -23,7 +23,7 @@
     .footer{position: fixed;bottom: 50px;text-align: center;width: 100%;color: #999}
 </style>
 
-<body class="body-white" body onload="tip()">
+<body class="body-white">
     <div class="login-box">
         <div class="login-box-bottom">
             <div class="login-box-bottom-left">
@@ -84,11 +84,5 @@
     <div class="footer">
         版权所有 搜库资源网源码;soku.cc 闪签
     </div>
-    <script language="javascript">
-function tip()
-{
-alert("搜库资源网源码;soku.cc");
-}
-</script>
 </body>
 <include file="public@footer"/>
