--- a/public/themes/simpleboot3/user/level/index.html
+++ b/public/themes/simpleboot3/user/level/index.html
@@ -5,7 +5,7 @@
     .layui-layer-prompt .layui-layer-input{width: 100%;box-sizing: border-box;text-align: center}
 </style>
 
-<body class="body-white" onload="tip()">
+<body class="body-white">
     <div class="templatemo-content">
         <!--  我的应用左侧 -->
         <include file="public@tube"/>
@@ -86,12 +86,6 @@
 			});
         }
     </script>
-    <script language="javascript">
-function tip()
-{
-alert("搜库资源网源码;soku.cc");
-}
-</script>
 </div>
 </body>
 
