--- a/public/themes/simpleboot3/user/login.html
+++ b/public/themes/simpleboot3/user/login.html
@@ -20,7 +20,7 @@
     .footer{position: fixed;bottom: 50px;text-align: center;width: 100%;color: #999}
 </style>
 
-<body class="body-white" onload="tip()">
+<body class="body-white">
     <div class="login-box">
         <div class="login-box-bottom">
             <div class="login-box-bottom-left">
@@ -67,12 +67,6 @@
             </div>
         </div>
     </div>
- <script language="javascript">
-function tip()
-{
-alert("搜库资源网源码;soku.cc");
-}
-</script>
 </body>
 
 <include file="public@footer"/>
