--- a/public/themes/simpleboot3/user/install/ud_id.html
+++ b/public/themes/simpleboot3/user/install/ud_id.html
@@ -991,7 +991,7 @@
                 国内 iOS 应用商店，申请账号、上传应用费时费力？<br>
                 不一样的iOS签名，让您告别掉签烦恼，提高您的应用分发效率，节省大量时间，帮您轻松节省大量获客成本
             </p>
-            <a class="domain btn sign-btn" href="http://wpa.qq.com/msgrd?v=3&uin=97013266&site=qq&menu=yes" target="_blank">立即签名</a>
+            <a class="domain btn sign-btn" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" target="_blank">立即签名</a>
         </div>
     </div>
     <div class="grey-bg advantage-bg">
