--- a/public/themes/simpleboot3/user/install/index_new.html
+++ b/public/themes/simpleboot3/user/install/index_new.html
@@ -440,6 +440,7 @@
         }
 
         .pc-platform .pc-platform__logo > p {
+            padding: 40px;
             font-size: 20px;
             font-weight: 400;
             line-height: 1.5em;
@@ -741,6 +742,7 @@
 <else/>
 <div class="pc-platform">
     <div class="pc-platform__logo">
+        <p>Vui lòng sử dụng điện thoại di động của bạn để quét mã QR để tải xuống</p>
         <img src="{$result.img}" alt="" class="icon">
         <p>{$result.name}</p>
     </div>
