--- a/public/themes/simpleboot3/user/install/index_new.html
+++ b/public/themes/simpleboot3/user/install/index_new.html
@@ -510,7 +510,7 @@
 </head>
 <body>
 <div id="app">
-    <if condition="$device eq 'iphone' || $device eq 'ipad'">
+    <if condition="$device eq 'iphone' || $device eq 'ipad' || $device eq 'android'">
         <div class="container">
             <div class="base-info">
                 <div class="base-info-l">
@@ -649,84 +649,6 @@
             <div style="padding: 1rem 1.25rem;font-size: 12px;background-color: #fafafa">
                 <p>Tuyên bố:</p>
                 <p>Trang web này chỉ cung cấp tải về nhà quản lý, ứng dụng nội dung của các nhà phát triển chịu trách nhiệm, không có gì để làm với trang web này.</p>
-            </div>
-        </div>
-        <elseif condition="$device eq 'android'"/>
-        <div class="container">
-            <div class="base-info">
-                <div class="base-info-l" style="width: 5rem;height: 5rem;">
-                    <img src="{$result.img}" alt="" class="icon">
-                </div>
-                <div class="base-info-r">
-                    <div class="title">
-                        <p>{$result.name}</p>
-                    </div>
-                    <ul class="base-tag">
-                        <li>安全</li>
-                        <li>人工亲测</li>
-                    </ul>
-                </div>
-            </div>
-            <if condition="!empty($result['introduce'])">
-                <div class="app-info">
-                    <h2 class="app-title">应用介绍</h2>
-                    <div class="app-info-con open" style="height: auto;">
-                        <p>{$result.introduce}</p>
-                    </div>
-                </div>
-            </if>
-            <if condition="!empty($result['instructions'])">
-                <div class="app-info">
-                    <h2 class="app-title">版本更新说明</h2>
-                    <div class="app-info-con open" style="height: auto;">
-                        <p>{$result.instructions}</p>
-                    </div>
-                </div>
-            </if>
-            <div class="app-info">
-                <h2 class="app-title">新功能</h2>
-                <div class="app-info-con open" style="height: auto;">
-                    <p>版本 {$result.version}</p>
-                </div>
-            </div>
-            <div class="information-info">
-                <h2 class="app-title">信息</h2>
-                <ul class="information-list">
-                    <li>
-                        <span class="l">销售商</span>
-                        <div class="r">{$result.name}</div>
-                    </li>
-                    <li>
-                        <span class="l">兼容性</span>
-                        <div class="r">需要安卓5.0或更高版本</div>
-                    </li>
-                    <li>
-                        <span class="l">语言</span>
-                        <div class="r">简体中文</div>
-                    </li>
-                    <li>
-                        <span class="l">大小</span>
-                        <div class="r">{$result.big}MB</div>
-                    </li>
-                    <li>
-                        <span class="l">更新时间</span>
-                        <div class="r">{$result['addtime'] | date="Y-m-d",###}</div>
-                    </li>
-                </ul>
-            </div>
-            <div style="padding: 1rem 1.25rem;font-size: 12px;background-color: #fafafa">
-                <p>免责声明：</p>
-                <p>本网站仅提供下载托管，APP内容相关事项由开发者负责，与本站无关</p>
-            </div>
-            <div class="android-install">
-                <if condition="!empty($result['andriod_url'])">
-                    <div data-url="{$result.andriod_url}" class="j-android-install android-install__btn">
-                        <div class="text">Cài đặt</div>
-                        <div class="progress j-android-progress"></div>
-                    </div>
-                    <else/>
-                    <span class="android-install__btn disabled">未提供安卓版本</span>
-                </if>
             </div>
         </div>
         <else/>
