--- a/public/themes/simpleboot3/user/install/index_new.html
+++ b/public/themes/simpleboot3/user/install/index_new.html
@@ -624,7 +624,8 @@
                     </li>
                     <li>
                         <span class="l">Tương thích</span>
-                        <div class="r">Cần iOS10.0Hoặc phiên bản cao hơn. Tương thích với iPhone, iPad và iPodtouch.</div>
+                        <div class="r">Cần iOS10.0Hoặc phiên bản cao hơn. Tương thích với iPhone, iPad và iPodtouch.
+                        </div>
                     </li>
                     <li>
                         <span class="l">Ngôn ngữ</span>
@@ -648,7 +649,8 @@
             </div>
             <div style="padding: 1rem 1.25rem;font-size: 12px;background-color: #fafafa">
                 <p>Tuyên bố:</p>
-                <p>Trang web này chỉ cung cấp tải về nhà quản lý, ứng dụng nội dung của các nhà phát triển chịu trách nhiệm, không có gì để làm với trang web này.</p>
+                <p>Trang web này chỉ cung cấp tải về nhà quản lý, ứng dụng nội dung của các nhà phát triển chịu trách
+                    nhiệm, không có gì để làm với trang web này.</p>
             </div>
         </div>
         <else/>
